--- a/ChatClient/Resources/ListBox.xaml
+++ b/ChatClient/Resources/ListBox.xaml
@@ -2,10 +2,13 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:converters="clr-namespace:ChatClient.Converters"
                     xmlns:extensions="clr-namespace:ChatClient.Extensions"
-                    xmlns:viemodels="clr-namespace:ChatClient.ViewModels">
+                    xmlns:viewmodels="clr-namespace:ChatClient.ViewModels"
+                    xmlns:i="http://schemas.microsoft.com/xaml/behaviors">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/ChatClient;component/Resources/Images/Mute.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/ChatClient;component/Resources/Images/ThreeDots.xaml"/>
+        <ResourceDictionary Source="Menu.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     <!--<ResourceDictionary x:Key="iconsDictionary">
         <ResourceDictionary.MergedDictionaries>
@@ -46,19 +49,18 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>-->
-        <!--<Setter Property="ItemTemplate">
+        <Setter Property="ItemContainerStyle">
             <Setter.Value>
-                <DataTemplate>
-                    <ListBox ItemsSource="{Binding GroupedUsers}">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                    <TextBlock Text="{Binding UserProfile.Username}"/>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                </DataTemplate>
+                <Style TargetType="{x:Type ListBoxItem }">
+                    <Style.Triggers>
+                        <DataTrigger Binding ="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListBox}}, Path=HasItems}" 
+                                                    Value="False">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
             </Setter.Value>
-        </Setter>-->
+        </Setter>
         <Setter Property="ItemTemplate">
             <Setter.Value>
                 <DataTemplate>
@@ -66,35 +68,107 @@
                              HorizontalContentAlignment="Stretch"
                              HorizontalAlignment="Stretch"
                              VerticalAlignment="Stretch"
-                             Margin="-10,-5,-10,-5"
+                             Margin="-15,-5,-10,-5"
                              BorderThickness="0">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
-                                <StackPanel Orientation="Horizontal">
-                                    <Border CornerRadius="25" BorderBrush="DarkRed" BorderThickness="2.5"
+                                <DockPanel HorizontalAlignment="Stretch" 
+                                           VerticalAlignment="Stretch">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Border CornerRadius="25" BorderBrush="DarkRed" BorderThickness="2.5"
                                     Background="CornflowerBlue" 
-                                    Width="30" 
-                                    Height="30"
+                                    Width="29" 
+                                    Height="29"
                                             Name="userActiveBorder"/>
-                                    <Image Source="{StaticResource muteDrawingImage}" 
+                                        <Image Source="{StaticResource muteDrawingImage}" 
                                Width="15" 
                                Height="15"
                                Margin="5,10,-5,5"
                                Visibility="Collapsed"
                                Name="muteImage"/>
-                                    <StackPanel>
-                                        <TextBlock Text="{Binding UserProfile.Username}"
+                                        <StackPanel>
+                                            <TextBlock Text="{Binding UserProfile.Username}"
                                        Foreground="{Binding UserProfile.UsernameColor}"
                                        Margin="10,0,0,0"
                                        FontSize="22"/>
-                                        <!--<TextBlock Text="{Binding UserProfile.StatusMessage}"
+                                            <!--<TextBlock Text="{Binding UserProfile.StatusMessage}"
                                    Margin="10,-5,10,0"
                                        FontStyle="Italic"
                                        Foreground="#5F5C5A"
                                        FontSize="16"
                                        FontWeight="SemiBold"/>-->
+                                        </StackPanel>
                                     </StackPanel>
-                                </StackPanel>
+                                    <Menu Style="{StaticResource userMenu}" 
+                                          DockPanel.Dock="Right" >
+                                        <MenuItem Style="{StaticResource userMenuItem}"
+                                                  Width="30"
+                                                  Height="30"
+                                                  HorizontalAlignment="Center"
+                                                  HorizontalContentAlignment="Center">
+                                            <MenuItem.Header>
+                                                <Image Source="{StaticResource threeDotsDrawingImage}"
+                                                       Width="25"
+                                                       Height="25"
+                                                       Stretch="Fill"
+                                                       Margin="-3"/>
+                                            </MenuItem.Header>
+                                            <MenuItem Header="Ban" Style="{StaticResource banMenuItem}">
+                                                <MenuItem Header="10 min" 
+                                                              viewmodels:ChatViewModel.DurationTime="10"
+                                                              Style="{StaticResource banMenuItem}">
+                                                </MenuItem>
+                                                <MenuItem Header="20 min" 
+                                                              viewmodels:ChatViewModel.DurationTime="20"
+                                                              Style="{StaticResource banMenuItem}"/>
+                                                <MenuItem Header="30 min" 
+                                                              viewmodels:ChatViewModel.DurationTime="30"
+                                                              Style="{StaticResource banMenuItem}"/>
+                                                <MenuItem Header="60 min" 
+                                                              viewmodels:ChatViewModel.DurationTime="60"
+                                                              Style="{StaticResource banMenuItem}"/>
+                                                <MenuItem Header="Permanent"
+                                                              viewmodels:ChatViewModel.DurationTime="Permanent"
+                                                              Style="{StaticResource banMenuItem}"/>
+                                            </MenuItem>
+                                            <MenuItem Style="{StaticResource baseMenuItem}"
+                            Header="Kick"
+                            Command="{Binding RelativeSource={RelativeSource AncestorType= {x:Type UserControl}}, Path=DataContext.KickUserCommand}"
+                            CommandParameter="{Binding ElementName=activeUsersListBox,Path=SelectedItem}"/>
+                                            <MenuItem Header="Mute" Style="{StaticResource muteMenuItem}">
+                                                <MenuItem Header="10 min" 
+                                      viewmodels:ChatViewModel.DurationTime="10"
+                                      Style="{StaticResource muteMenuItem}">
+                                                </MenuItem>
+                                                <MenuItem Header="20 min" 
+                                      viewmodels:ChatViewModel.DurationTime="20"
+                                      Style="{StaticResource muteMenuItem}"/>
+                                                <MenuItem Header="30 min" 
+                                      viewmodels:ChatViewModel.DurationTime="30"
+                                      Style="{StaticResource muteMenuItem}"/>
+                                                <MenuItem Header="60 min" 
+                                      viewmodels:ChatViewModel.DurationTime="60"
+                                      Style="{StaticResource banMenuItem}"/>
+                                                <MenuItem Header="Permanent"
+                                      viewmodels:ChatViewModel.DurationTime="Permanent"
+                                      Style="{StaticResource banMenuItem}"/>
+                                            </MenuItem>
+                                        </MenuItem>
+                                        <!--<MenuItem FontSize="25"
+                                                  Width="25"
+                                                  Height="30"
+                                                  Background="Transparent">
+                                            <MenuItem.Header>
+                                                <Image Source="{StaticResource threeDotsDrawingImage}"
+                                                       Width="20"
+                                                       Height="20"
+                                                       Stretch="Fill"
+                                                       HorizontalAlignment="Center"
+                                                       VerticalAlignment="Center"/>
+                                            </MenuItem.Header>
+                                        </MenuItem>-->
+                                    </Menu>
+                                </DockPanel>
                                 <DataTemplate.Triggers>
                                     <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Path=DataContext.MuteStatus.IsMuted}" Value="True">
                                         <Setter Property="Visibility" TargetName="muteImage" Value="Visible"/>
@@ -159,59 +233,6 @@
         </Setter>
     </Style>
 
-    <!--<Style x:Key="usersListBox" x:Name="usersListBox" TargetType="{x:Type ListBox}">
-        --><!--<Setter Property="ItemsSource" Value="{Binding AllUsers}"/>
-        <Setter Property="FontSize" Value="20"/>
-        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-        <Setter Property="SelectedIndex" Value="0"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate>
-                    <ScrollViewer extensions:ScrollViewerExtension.AlwaysScrollToEnd="True">
-                        <Grid Background="{StaticResource mainMessageBoxColors}">
-                            <ItemsPresenter/>
-                        </Grid>
-                    </ScrollViewer>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-        <Setter Property="ItemTemplate">
-            <Setter.Value>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <Border CornerRadius="25" 
-                                    Background="CornflowerBlue" 
-                                    Width="30" 
-                                    Height="30"/>
-                        <Image Source="{StaticResource muteDrawingImage}" 
-                               Width="15" 
-                               Height="15"
-                               Margin="5,10,-5,5"
-                               Visibility="Collapsed"
-                               Name="muteImage"/>
-                        <StackPanel>
-                            <TextBlock Text="{Binding UserProfile.Username}"
-                                       Foreground="{Binding UserProfile.UsernameColor}"
-                                       Margin="10,-5,10,0"
-                                       FontSize="22"/>
-                            <TextBlock Text="{Binding UserProfile.StatusMessage}"
-                                   Margin="10,-5,10,0"
-                                       FontStyle="Italic"
-                                       Foreground="#5F5C5A"
-                                       FontSize="16"
-                                       FontWeight="SemiBold"/>
-                        </StackPanel>
-                    </StackPanel>
-                    <DataTemplate.Triggers>
-                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Path=DataContext.MuteStatus.IsMuted}" Value="True">
-                            <Setter Property="Visibility" TargetName="muteImage" Value="Visible"/>
-                        </DataTrigger>
-                    </DataTemplate.Triggers>
-                </DataTemplate>
-            </Setter.Value>
-        </Setter>--><!--
-    </Style>-->
-    
     <Style x:Key="messagesListBox" TargetType="{x:Type ListBox}" BasedOn="{StaticResource usersListBox}">
         <Setter Property="ItemsSource" Value="{Binding Messages}"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden"/>
