--- a/ChatClient/Resources/ListBox.xaml
+++ b/ChatClient/Resources/ListBox.xaml
@@ -17,6 +17,7 @@
     </ResourceDictionary>-->
 
     <converters:MessageLineNormalizeConverter x:Key="normalizedMessage"/>
+    <converters:MultiValueEqualityConverter x:Key="equalityConverter"/>
 
     <LinearGradientBrush x:Key="mainMessageBoxColors" StartPoint="0.5,0" EndPoint="0.5,1">
         <GradientStop Color="#E6E7FF" Offset="0"/>
@@ -27,28 +28,11 @@
         <GradientStop Color="#E6E7FF" Offset="1"/>
     </LinearGradientBrush>
 
-    <!--<CollectionViewSource x:Key="ListBoxItems" Source="{Binding Path=Groups}">
-        <CollectionViewSource.GroupDescriptions>
-            <PropertyGroupDescription PropertyName="Name"/>
-        </CollectionViewSource.GroupDescriptions>
-    </CollectionViewSource>-->
-
     <Style x:Key="usersListBox" x:Name="usersListBox" TargetType="{x:Type ListBox}">
         <!--<Setter Property="ItemsSource" Value="{Binding Source={StaticResource ListBoxItems}}"/>-->
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
         <Setter Property="SelectedIndex" Value="0"/>
-        <!--<Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate>
-                    <ScrollViewer extensions:ScrollViewerExtension.AlwaysScrollToEnd="True">
-                        <Grid Background="{StaticResource mainMessageBoxColors}">
-                            <ItemsPresenter/>
-                        </Grid>
-                    </ScrollViewer>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>-->
         <Setter Property="ItemContainerStyle">
             <Setter.Value>
                 <Style TargetType="{x:Type ListBoxItem }">
@@ -75,7 +59,9 @@
                                 <DockPanel HorizontalAlignment="Stretch" 
                                            VerticalAlignment="Stretch">
                                     <StackPanel Orientation="Horizontal">
-                                        <Border CornerRadius="25" BorderBrush="DarkRed" BorderThickness="2.5"
+                                        <Border CornerRadius="25" 
+                                                BorderBrush="DarkRed" 
+                                                BorderThickness="2.5"
                                     Background="CornflowerBlue" 
                                     Width="29" 
                                     Height="29"
@@ -132,41 +118,28 @@
                                                               Style="{StaticResource banMenuItem}"/>
                                             </MenuItem>
                                             <MenuItem Style="{StaticResource baseMenuItem}"
-                            Header="Kick"
-                            Command="{Binding RelativeSource={RelativeSource AncestorType= {x:Type UserControl}}, Path=DataContext.KickUserCommand}"
-                            CommandParameter="{Binding ElementName=activeUsersListBox,Path=SelectedItem}"/>
+                                                      Header="Kick"
+                                                      Command="{Binding RelativeSource={RelativeSource AncestorType= {x:Type UserControl}}, Path=DataContext.KickUserCommand}"
+                                                      CommandParameter="{Binding ElementName=activeUsersListBox,Path=SelectedItem}"/>
                                             <MenuItem Header="Mute" Style="{StaticResource muteMenuItem}">
                                                 <MenuItem Header="10 min" 
-                                      viewmodels:ChatViewModel.DurationTime="10"
-                                      Style="{StaticResource muteMenuItem}">
+                                                          viewmodels:ChatViewModel.DurationTime="10"
+                                                          Style="{StaticResource muteMenuItem}">
                                                 </MenuItem>
                                                 <MenuItem Header="20 min" 
-                                      viewmodels:ChatViewModel.DurationTime="20"
-                                      Style="{StaticResource muteMenuItem}"/>
+                                                          viewmodels:ChatViewModel.DurationTime="20"
+                                                          Style="{StaticResource muteMenuItem}"/>
                                                 <MenuItem Header="30 min" 
-                                      viewmodels:ChatViewModel.DurationTime="30"
-                                      Style="{StaticResource muteMenuItem}"/>
+                                                          viewmodels:ChatViewModel.DurationTime="30"
+                                                          Style="{StaticResource muteMenuItem}"/>
                                                 <MenuItem Header="60 min" 
-                                      viewmodels:ChatViewModel.DurationTime="60"
-                                      Style="{StaticResource banMenuItem}"/>
+                                                          viewmodels:ChatViewModel.DurationTime="60"
+                                                          Style="{StaticResource banMenuItem}"/>
                                                 <MenuItem Header="Permanent"
-                                      viewmodels:ChatViewModel.DurationTime="Permanent"
-                                      Style="{StaticResource banMenuItem}"/>
+                                                          viewmodels:ChatViewModel.DurationTime="Permanent"
+                                                          Style="{StaticResource banMenuItem}"/>
                                             </MenuItem>
                                         </MenuItem>
-                                        <!--<MenuItem FontSize="25"
-                                                  Width="25"
-                                                  Height="30"
-                                                  Background="Transparent">
-                                            <MenuItem.Header>
-                                                <Image Source="{StaticResource threeDotsDrawingImage}"
-                                                       Width="20"
-                                                       Height="20"
-                                                       Stretch="Fill"
-                                                       HorizontalAlignment="Center"
-                                                       VerticalAlignment="Center"/>
-                                            </MenuItem.Header>
-                                        </MenuItem>-->
                                     </Menu>
                                 </DockPanel>
                                 <DataTemplate.Triggers>
@@ -198,12 +171,37 @@
                         </ListBox.Style>
                     </ListBox>
                 </DataTemplate>
-                <!--<DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="privateUsersListBox" TargetType="{x:Type ListBox}">
+        <Setter Property="ItemsSource" Value="{Binding AllUsers}"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+        <Setter Property="SelectedIndex" Value="0"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <ScrollViewer extensions:ScrollViewerExtension.AlwaysScrollToEnd="True">
+                        <Grid Background="{StaticResource mainMessageBoxColors}">
+                            <ItemsPresenter/>
+                        </Grid>
+                    </ScrollViewer>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="ItemTemplate">
+            <Setter.Value>
+                <DataTemplate>
                     <StackPanel Orientation="Horizontal">
                         <Border CornerRadius="25" 
                                     Background="CornflowerBlue" 
                                     Width="30" 
-                                    Height="30"/>
+                                    Height="30"
+                                Name="userActiveBorder"
+                                BorderBrush="DarkRed"
+                                BorderThickness="2.5"/>
                         <Image Source="{StaticResource muteDrawingImage}" 
                                Width="15" 
                                Height="15"
@@ -214,23 +212,39 @@
                             <TextBlock Text="{Binding UserProfile.Username}"
                                        Foreground="{Binding UserProfile.UsernameColor}"
                                        Margin="10,-5,10,0"
-                                       FontSize="22"/>
-                            <TextBlock Text="{Binding UserProfile.StatusMessage}"
+                                       FontSize="22"
+                                       Name="userTextBlock"/>
+                            <!--<TextBlock Text="{Binding UserProfile.StatusMessage}"
                                    Margin="10,-5,10,0"
                                        FontStyle="Italic"
                                        Foreground="#5F5C5A"
                                        FontSize="16"
-                                       FontWeight="SemiBold"/>
+                                       FontWeight="SemiBold"/>-->
                         </StackPanel>
                     </StackPanel>
                     <DataTemplate.Triggers>
-                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Path=DataContext.MuteStatus.IsMuted}" Value="True">
+                        <DataTrigger Binding="{Binding UserStatus.MuteStatus.IsMuted}" Value="True">
                             <Setter Property="Visibility" TargetName="muteImage" Value="Visible"/>
                         </DataTrigger>
+                        <DataTrigger Binding="{Binding UserProfile.IsOnline}" Value="True">
+                            <Setter Property="BorderBrush" TargetName="userActiveBorder" Value="Green"/>
+                        </DataTrigger>
+                        <DataTrigger Value="True">
+                            <DataTrigger.Binding>
+                                <MultiBinding Converter="{StaticResource equalityConverter}">
+                                    <Binding RelativeSource="{RelativeSource Self}" 
+                                             Path="DataContext.UserProfile.Username"/>
+                                    <Binding RelativeSource="{RelativeSource AncestorType={x:Type ListBox}}"
+                                             Path="DataContext.CurrentUser.UserProfile.Username"/>
+                                </MultiBinding>
+                            </DataTrigger.Binding>
+                            <Setter Property="Visibility"  Value="Collapsed"/>
+                        </DataTrigger>
                     </DataTemplate.Triggers>
-                </DataTemplate>-->
+                </DataTemplate>
             </Setter.Value>
         </Setter>
+    
     </Style>
 
     <Style x:Key="messagesListBox" TargetType="{x:Type ListBox}" BasedOn="{StaticResource usersListBox}">
