--- a/ChatClient/Resources/ToolBar.xaml
+++ b/ChatClient/Resources/ToolBar.xaml
@@ -18,15 +18,15 @@
 
     <Style x:Key="usersToolBar" x:Name="usersToolBar" TargetType="{x:Type ToolBar}">
         <Setter Property="ToolBar.OverflowMode" Value="Never"/>
-        <Setter Property="Background" Value="#EEEEEE"/>
+        <Setter Property="Background" Value="{StaticResource mainMessageBoxColors}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToolBar}">
-                    <Menu Background="White">
+                    <Menu Background="{StaticResource mainMessageBoxColors}">
                         <MenuItem ItemsSource="{Binding UsersCollectionView}"
                                           HorizontalAlignment="Right"
-                                          Background="White"
+                                          Background="{StaticResource mainMessageBoxColors}"
                                           BorderBrush="#EEEEEE"
                                           BorderThickness="2"
                                   Margin="5,5,0,0">
